# EuroScopePlugInSDK

./: LICENSE  Plug-in Developer's Guide.md  Plug-in developer’s Guide.md  README.md
examples/CPrecisionApproachPlugIn/: TestPlugin.cpp  TestPlugin.h
examples/CRadarPlugIn/: CMakeLists.txt  CPrecisionApproachScreen.cpp  CPrecisionApproachScreen.h
examples/PrecisionApproachPlugIn/: CMakeLists.txt
